@@ -1,0 +1,2 @@
+Remove empty leading paragraph in Description.
+Fixed-Lintian-Tags: extended-description-contains-empty-paragraph
