@@ -4,6 +4,7 @@ lintian-brush (0.101) UNRELEASED; urgency=medium
   * Improve handling of generated debcargo fields.
   * Depend on python3-toml to run tests - it's a recommended dependency
     of upstream-ontologist.
+  * Add fixer for extended-description-contains-empty-paragraph.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 06 Mar 2021 05:11:38 +0000
 
